# Twister

./: .flake8  .gitignore  .travis.yml  LICENSE  Pipfile  README.org  pyproject.toml  setup.cfg  setup.py  tox.ini  twister.py
Twister/: DynamicScraper.py  __init__.py  command_line.py  test_DynamicScraper.py
tests/: test_dynamic_scraper.py
twister/: __init__.py  command_line.py  dynamic_scraper.py
