[tool.poetry]
name = "twister"
version = "0.1.0"
description = "Commandline tool for dynamic websites"
authors = ["Jarmo Riikonen <amatrelan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
dvscraper = {git = "https://github.com/amatrelan/dvscraper"}

[tool.poetry.dev-dependencies]
eradicate = "^1.0"
pytest = "^4.2"
pytest-flake8 = "^1.0"
pytest-mccabe = "^0.1.0"
tox = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
twister = "twister.command_line:main"
